--- a/assets/sass/pages/_profile.scss
+++ b/assets/sass/pages/_profile.scss
@@ -28,6 +28,7 @@
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
+            object-fit: cover;
             @include respond-to('medium2'){
                 top: 3.2rem;
                 left: 5rem;
